--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <section id="Contact-Me">
             <h2>Contact Me</h2>
           <ul>
-            <li><strong>Email:</strong> <a href="#">tmerritt5635@gmail.com</a></li>
+            <li>Email:<a href="#">tmerritt5635@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">@tmerritt56</a></li>
           </ul>
         </section>
     </div>
     <div class="footer">
-        <h3>Made with ❤️ by Tara</h3>
+        <h3>Made with: ❤️ by Tara</h3>
     </div>
     </main>
     
