--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               </div>
               <div>
                 <a href="https://tmerritt56.github.io/CSS-First-Challenge/" target="_blank"><img class= "images"src="./Assets/Images/work.png" alt="First Challenge"/>
-                <a href="https://www.google.com/" target="_blank"> <img class="images" src="./Assets/Images/download.jpg" alt="Placeholder"/>
+                <a href="https://kyky19.github.io/project-1/" target="_blank"> <img class="images" src="./Assets/Images/project1.PNG" alt="First project"/>
               </div>
         </section>
         <section id="Contact-Me">
             <h2>Contact Me</h2>
           <ul>
             <li>Email:<a href="#">tmerritt5635@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">@tmerritt56</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/tmerritt56">@tmerritt56</a></li>
           </ul>
         </section>
     </div>
