--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <div>
                 <a href="https://tmerritt56.github.io/CSS-First-Challenge/" target="_blank"><img class= "images"src="./Assets/Images/work.png" alt="First Challenge"/>
                 <a href="https://kyky19.github.io/project-1/" target="_blank"> <img class="images" src="./Assets/Images/project1.PNG" alt="First project"/>
+                <a href="https://radiant-hollows-45917.herokuapp.com/" target="_blank"><img class="images" src="./Assets/Images/Pretty.PNG" alt="Social Unicorn"/>
               </div>
         </section>
         <section id="Contact-Me">
